--- a/BackgroundService.NET/BackgroundService.NET.csproj
+++ b/BackgroundService.NET/BackgroundService.NET.csproj
@@ -8,6 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0"/>
+        <PackageReference Include="Cronos" Version="0.7.1" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\BackgroundService.NET.CronJob\BackgroundService.NET.CronJob.csproj" />
     </ItemGroup>
 </Project>
