--- a/BackgroundService.NET/appsettings.json
+++ b/BackgroundService.NET/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "CronHostOptions": {
+    "CronString": "*/5 * * * * "
   }
 }
