Add debug switch and CronJobProviderOptions.cs to allow setting the a different path to the plugin while debugging
This shall allow developing and debugging of plugins without any manual copying to do

--- a/BackgroundService.NET/appsettings.Development.json
+++ b/BackgroundService.NET/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Debug",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "CronJobProviderOptions": {
+    "AssemblyProbeDirectory" : "..\\..\\BackgroundService.NET\\BackgroundService.NET.SamplePlugins\\BackgroundService.NET.PluginWithDependencies\\bin\\Debug\\net6.0"
   }
 }
