--- a/BackgroundService.NET/BackgroundService.NET.csproj
+++ b/BackgroundService.NET/BackgroundService.NET.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <PackageReference Include="Cronos" Version="0.7.1" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
