Added NLog to enable file logging

--- a/BackgroundService.NET/appsettings.json
+++ b/BackgroundService.NET/appsettings.json
@@ -1,9 +1,27 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "NLog": {
+    "autoReload": true,
+    "throwConfigExceptions": true,
+    "targets": {
+      "logfile": {
+        "type": "File",
+        "fileName": "./Service.log",
+        "layout": "${longdate} [${level:uppercase=true}] [${logger}] ${message}${onexception:inner=${newline}${exception:format=toString}}",
+        "maxArchiveFiles": 10,
+        "archiveAboveSize": 1000000
+      },
+      "logconsole": {
+        "type": "ColoredConsole",
+        "layout": "${longdate} [${level:uppercase=true}] [${logger}] ${message}${onexception:inner=${newline}${exception:format=toString}}"
+      }
+    },
+    "rules": [
+      {
+        "logger": "*",
+        "minLevel": "Debug",
+        "writeTo": "logconsole, logfile"
+      }
+    ]
   },
   "CronHostOptions": {
     "CronString": "*/5 * * * * *"
