--- a/BackgroundService.NET/BackgroundService.NET.csproj
+++ b/BackgroundService.NET/BackgroundService.NET.csproj
@@ -17,6 +17,8 @@
         <PackageReference Include="Cronos" Version="0.7.1" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
+        <PackageReference Include="NLog" Version="4.7.13" />
+        <PackageReference Include="NLog.Extensions.Logging" Version="1.7.4" />
     </ItemGroup>
 
     <ItemGroup>
