Change default log path to a path where the service has permissions to write files

--- a/BackgroundService.NET/appsettings.json
+++ b/BackgroundService.NET/appsettings.json
@@ -5,7 +5,7 @@
     "targets": {
       "logfile": {
         "type": "File",
-        "fileName": "./Service.log",
+        "fileName": "${specialfolder:CommonApplicationData}/BackgroundService.NET/Service.log",
         "layout": "${longdate} [${level:uppercase=true}] [${logger}] ${message}${onexception:inner=${newline}${exception:format=toString}}",
         "maxArchiveFiles": 10,
         "archiveAboveSize": 1000000
